--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -952,7 +952,7 @@
 		-webkit-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, opacity 0.2s ease-in-out;
 		-ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, opacity 0.2s ease-in-out;
 		transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, opacity 0.2s ease-in-out;
-		background-color: #FF6600;
+		background-color: rgba(255, 255, 255, 0.5);
 		border-radius: 6px;
 		border: 0;
 		color: #ffffff !important;
@@ -972,7 +972,7 @@
 		input[type="button"]:hover,
 		button:hover,
 		.button:hover {
-			background-color: #1fcaa7;
+			background-color: #FF6600;
 		}
 
 		input[type="submit"]:active,
