--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,12 @@
     
 <!-- Header -->
 <header id="header">
-	<h1>{{ site.title }}</h1>
+	<h1>
+	<span class="symbol">
+				<img src="{{ site.baseurl }}/{{ site.logo-image-url }}" alt="" />
+
+	</span>
+	</h1>
 	<p>{{ site.description }}</p>
 </header>
 
