--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -33,7 +33,7 @@
         {% endif %}
 	</ul>
 	<ul class="copyright">
-		<li>&copy; {{ site.title }} .</li><li>By <a href="http://sufnitextil.eu" target="_blank">Sufni Textil</a></li><li>HTML5UP/li>
+		<li>&copy; {{ site.title }} .</li><li>By <a href="http://sufnitextil.eu" target="_blank">Sufni Textil</a></li><li>HTML5UP</li>
 	</ul>
 </footer>
 
