--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
 <header id="header">
 	<h1>
 	<span class="symbol">
-				<img src="{{ site.baseurl }}/{{ site.logo-image-url }}" alt="" />
+				<img src="{{ site.baseurl }}/{{ site.logo-image-url }}" alt="RUFTEX" />
 
 	</span>
 	</h1>
