--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
 -->
 <html>
 {% include head.html %}
+<title>{{ site.title }} - {{ site.description-en }}</title>
 <body>
     
 <!-- Header -->
@@ -16,7 +17,8 @@
 
 	</span>
 	</h1>
-	<p>{{ site.description }}</p>
+	<p>{{ site.description-en }}</p>
+	<p>{{ site.mailing-en }}</p>
 </header>
 
 <!-- Signup Form -->
