--- a/_layouts/hu.html
+++ b/_layouts/hu.html
@@ -16,15 +16,15 @@
 
 	</span>
 	</h1>
-	<h2>{{ site.description-en }}</h2>
+	<h2>{{ site.description-hu }}</h2>
 	<p></p>
-	<p>{{ site.mailing-en }}</p>
+	<p>{{ site.mailing-hu }}</p>
 </header>
 
 <!-- Signup Form -->
 <form id="signup-form" method="post" action="#">
-	<input type="email" name="email" id="email" placeholder="Email Address" />
-	<input type="submit" value="Sign Up" />
+	<input type="email" name="email" id="email" placeholder="Email cím" />
+	<input type="submit" value="Feliratkozás" />
 </form>
 
 
