--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,11 @@
 <html>
 {% include head.html %}
 <body>
-    
+
+<div>
+Access our catalog online or download the [pdf file](/assets/ruftex-final.pdf)
+</div>
+
 <!-- Header -->
 <header id="header">
 	<h1>
