--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,8 +28,8 @@
 <form id="signup-form" method="post" action="https://formspree.io/hi@sufni.eu">
 	<input type="text" name="name" id="name" placeholder="Name" />
   <input type="email" name="email" id="email" placeholder="Email Address" />
-  <input type="longtext" name="message" id="message" placeholder="Message" />
-	<input type="submit" value="Submit" />
+  <textarea rows="4" cols="50" name="message" id="message" placeholder="Message" form="signup-form" />
+  	<input type="submit" value="Submit" />
 </form>
 
 
