--- a/_layouts/hu.html
+++ b/_layouts/hu.html
@@ -27,7 +27,7 @@
 <form id="signup-form" method="post" action="https://formspree.io/hi@sufni.eu">
 	<input type="text" name="name" id="name" placeholder="Név" />
   <input type="email" name="email" id="email" placeholder="Email" />
-  <input type="longtext" name="message" id="message" placeholder="Üzenet" />
+  <textarea rows="4" cols="50" name="message" id="message" placeholder="Üzenet" form="signup-form" />
 	<input type="submit" value="Elküld" />
 </form>
 
