--- a/_layouts/hu.html
+++ b/_layouts/hu.html
@@ -27,8 +27,8 @@
 <form id="signup-form" method="post" action="https://formspree.io/hi@sufni.eu">
 	<input type="text" name="name" id="name" placeholder="Név" />
   <input type="email" name="email" id="email" placeholder="Email" />
-  <textarea rows="4" cols="50" name="message" id="message" placeholder="Üzenet" form="signup-form" />
-	<input type="submit" value="Elküld" />
+  <p><textarea rows="4"  name="message" id="message" placeholder="Üzenet"></p>
+	  <p><input type="submit" value="Elküld" /></p>
 </form>
 
 
