--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,8 +28,8 @@
 <form id="signup-form" method="post" action="https://formspree.io/hi@sufni.eu">
 	<input type="text" name="name" id="name" placeholder="Name" />
   <input type="email" name="email" id="email" placeholder="Email Address" />
-  <textarea rows="4" cols="50" name="message" id="message" placeholder="Message" form="signup-form" />
-  	<input type="submit" value="Submit" />
+<p>  <textarea rows="4" cols="50" name="message" id="message" placeholder="Message" form="signup-form"></textarea></p>
+  <p>	<input type="submit" value="Submit" /></p>
 </form>
 
 
