--- a/_sass/layout/_signup-form.scss
+++ b/_sass/layout/_signup-form.scss
@@ -11,22 +11,21 @@
 /* Signup Form */
 
 	#signup-form {
-		@include vendor('display', 'flex');
+		@include vendor('display', 'block');
 		position: relative;
 
+		textarea,
 		input[type="text"],
 		input[type="password"],
 		input[type="email"] {
-			width: 18em;
+			width: 36em;
 		}
 
 		> * {
-			margin: 0 0 0 1em;
+			margin: 1em 0 0 1em;
 		}
 
-		> :first-child {
-			margin: 0 0 0 0;
-		}
+
 
 		@include breakpoint(xsmall) {
 			@include vendor('flex-direction', 'column');
