--- a/_layouts/hu.html
+++ b/_layouts/hu.html
@@ -28,7 +28,7 @@
 	<input type="text" name="name" id="name" placeholder="Név" />
   <input type="email" name="email" id="email" placeholder="Email" />
   <p>  <textarea rows="4" cols="50" name="message" id="message" placeholder="Üzenet" form="signup-form"></textarea></p>
-    <p>	<input type="submit" value="Submit" /></p>
+    <p>	<input type="submit" value="Elküld" /></p>
 </form>
 
 
