--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -33,7 +33,7 @@
         {% endif %}
 	</ul>
 	<ul class="copyright">
-		<li><a href="{{ site.url }}{{ site.baseurl }}"><img src="{{ site.url }}{{ site.baseurl }}/assets/images/en.png"></a></li><li><a href="{{ site.url }}{{ site.baseurl }}/hu.html"><img src="{{ site.url }}{{ site.baseurl }}/assets/images/hu.png"></a></li><li>&copy; {{ site.title }}</li><li>Sufni-Tex Szoc. Szöv.</li><li><a href="mailto:info@ruftex.eu" target="_blank">info@ruftex.eu</a></li><li>7400 Kaposvár, Bartók Béla u 6.</li>
+		<li><a href="{{ site.url }}{{ site.baseurl }}"><img src="{{ site.url }}{{ site.baseurl }}/assets/images/en.png"></a></li><li><a href="{{ site.url }}{{ site.baseurl }}/hu.html"><img src="{{ site.url }}{{ site.baseurl }}/assets/images/hu.png"></a></li><li>&copy; {{ site.title }}</li><li>Sufni-Tex Szoc. Szöv.</li>+36 30 724 6250<li><a href="mailto:info@ruftex.eu" target="_blank">info@ruftex.eu</a></li><li>7400 Kaposvár, Bartók Béla u 6.</li>
 	</ul>
 </footer>
 
