--- a/_layouts/hu.html
+++ b/_layouts/hu.html
@@ -6,6 +6,12 @@
 -->
 <html>
 {% include head.html %}
+
+<div style="position: fixed; z-index: 1000; bottom: 0px; right: 0px;">
+<a href="{{ site.url }}/palyazat" style="display: block;">
+<img src="{{ site.url }}/assets/esza.png" style="display: block;" /></a>
+</div>
+
 <body>
 
 <!-- Header -->
