--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,12 @@
 -->
 <html>
 {% include head.html %}
+
+<div style="position: fixed; z-index: 1000; bottom: 0px; right: 0px;">
+<a href="{{ site.url }}/palyazat" style="display: block;">
+<img src="{{ site.url }}/assets/esza.png" style="display: block;" /></a>
+</div>
+
 <body>
 
 
@@ -24,7 +30,7 @@
 	<p>{{ site.mailing-en }}</p>
 </header>
 
-<!-- 
+<!--
 <form id="signup-form" method="post" action="https://formspree.io/hi@sufni.eu">
 	<input type="text" name="name" id="name" placeholder="Name" />
   <input type="email" name="email" id="email" placeholder="Email Address" />
